# hermit-Nussinov78

./: Combined.hs  Nussinov78.cabal  README.md  Tests.hs
hermit-adpfusion/: hermit-streamfusion.cabal
hermit-adpfusion/HERMIT/Optimization/StreamFusion/: ADPfusion.hs
