name:           Nussinov78
version:        0.1.0.0
author:         Christian Hoener zu Siederdissen, 2011-2012
copyright:      Christian Hoener zu Siederdissen, 2011-2012
homepage:       http://www.tbi.univie.ac.at/~choener/adpfusion
maintainer:     choener@tbi.univie.ac.at
category:       Bioinformatics
license:        GPL-3
license-file:   LICENSE
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.6.0
synopsis:
                Nussinov78 using the ADPfusion library.
description:
                zzz




executable Nussinov78
  build-depends:
    base >= 4 && < 5,
    mtl            >= 2,
    primitive      >= 0.5   ,
    vector          ,
    PrimitiveArray >= 0.5.1.0 ,
    ghc-prim ,
    hermit >= 0.2.1 ,
    ghc ,
    strict ,
    repa ,
    hermit-adpfusion
  main-is:
    Combined.hs
  other-modules:
  ghc-options:
--    -fnew-codegen
    -O2
    -fllvm
--    -optlo-O3 -optlo-std-compile-opts

executable Tests
  build-depends:
  main-is:
    Tests.hs
  ghc-options:
    -O2
    -fllvm


--  source-repository head
--    type: git
--    location: git://github.com/choener/Nussinov78
--  
