name:                hermit-adpfusion
version:             0.1.0.0
synopsis:            Stream Fusion optimization for ADPfusion implemented as a HERMIT plugin.
-- description:
homepage:            https://github.com/choener/hermit-Nussinov78
license:             BSD3
license-file:        LICENSE
author:              Andrew Farmer (plugin)
maintainer:          afarmer@ittc.ku.edu
-- copyright:
category:            Development
build-type:          Simple
cabal-version:       >=1.14

library
    exposed-modules:
        HERMIT.Optimization.StreamFusion.ADPfusion

--    other-modules:

    build-depends:
        base,
        containers,
        data-default,
        ghc >= 7.6,
        hermit,
        template-haskell,
        vector

    ghc-options: -Wall
    default-language: Haskell2010
